infrastructure/overlays/infra01/configurations/authentication/leportail-org/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-leportail-org
  namespace: controller-authentication
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.leportail.org`)
      kind: Rule
      services:
        - name: authelia
          port: 80
  tls:
    secretName: auth-leportail-org-tls
